# cockroach-chat

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE.md  PROMPT.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  hardware-report.yml
.github/workflows/: ci.yml  fuzz-nightly.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  lint.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/chat/cockroach/: ApkSharer.kt  BleController.kt  KeyVault.kt  MainActivity.kt  MeshController.kt  PortraitCaptureActivity.kt
android/app/src/main/java/chat/cockroach/ble/: BleConstants.kt  BleMeshTransport.kt  MeshForegroundService.kt
android/app/src/main/java/chat/cockroach/ui/: App.kt  Components.kt  Credits.kt  Strings.kt  Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_notification.xml
android/app/src/main/res/values/: colors.xml  themes.xml
android/app/src/main/res/xml/: share_paths.xml
android/app/src/test/java/chat/cockroach/: ApkSharerTest.kt
android/app/src/test/java/chat/cockroach/ui/: StringsTest.kt
crates/meshcore/: Cargo.toml
crates/meshcore-ffi/: Cargo.toml
crates/meshcore-ffi/src/: lib.rs
crates/meshcore-store/: Cargo.toml
crates/meshcore-store/src/: lib.rs
crates/meshcore/fuzz/: Cargo.toml
crates/meshcore/fuzz/fuzz_targets/: decompress.rs  frag_reassemble.rs  wire_decode.rs
crates/meshcore/src/: channels.rs  clock.rs  compress.rs  config.rs  error.rs  frag.rs  identity.rs  lib.rs  node.rs  noise.rs  relay.rs  store.rs  transport.rs  wire.rs
crates/meshcore/tests/: vectors.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs  main.rs  scenarios.rs  topology.rs
crates/sim/tests/: scenarios.rs
docs/: IMPLEMENTATION_PLAN.md  PERFORMANCE.md  PROGRESS.md  protocol.md  research-brief.md  threat-model.md
docs/decisions/: ADR-0001-rust-core-uniffi.md
scripts/: build-android-lib.sh
testvectors/: packets.json
