[workspace]
resolver = "2"
members = [
    "crates/meshcore",
    "crates/sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/xdadwal/cockroach-chat"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
