[workspace]
resolver = "2"
members = [
    "crates/meshcore",
    "crates/meshcore-ffi",
    "crates/meshcore-store",
    "crates/sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Set by the highest MSRV in the resolved tree (zeroize, clap, getrandom, base64ct all need 1.85).
# CI enforces this; raise it only when a dependency actually forces it.
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/xdadwal/cockroach-chat"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
rand = "0.10"
rand_core = "0.6"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }
thiserror = "1"
snow = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
