[package]
name = "meshcore-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "SQLCipher-backed persistent Store for meshcore (ciphertext-at-rest)."

[dependencies]
meshcore = { path = "../meshcore" }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
