[package]
name = "meshcore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sans-IO protocol core for Cockroach Chat: wire format, fragmentation, identity, relay, store."

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
rand_core.workspace = true
getrandom.workspace = true
zeroize.workspace = true
lz4_flex.workspace = true
thiserror.workspace = true
snow.workspace = true

[dev-dependencies]
rand = "0.10"
serde_json = "1"
